# alphatrion

./: .env.example  .env.integration-test  .env.test  .gitignore  CLOUD_IDE_BLANK_PAGE_FIX.md  CLOUD_IDE_COMPLETE.md  CLOUD_IDE_ENHANCED.md  CLOUD_IDE_FULL_MIGRATION_PLAN.md  CLOUD_IDE_PROJECT_EXPERIMENT_SELECTOR.md  CLOUD_IDE_ROUTING_FIX.md  CLOUD_IDE_SEPARATE_PAGE.md  CLOUD_IDE_SIDEBAR_NEW_TAB.md  CLOUD_IDE_SIMPLIFIED.md  CLOUD_IDE_URL_UPDATE.md  Dockerfile  MIGRATION_SUMMARY.md  Makefile  PLUGIN_FRAMEWORK_SUMMARY.md  PLUGIN_SYSTEM_V2.md  README.md  RESTART_BACKEND.md  SECURITY_ANALYSIS.md  WORKSPACE_PLUGIN_SETUP.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: golang-workflow.yaml  python-ci.yaml
alphatrion/: __init__.py  consts.py  envs.py  main.py  types.py
alphatrion/agents/: __init__.py  claude.py
alphatrion/artifact/: artifact.py  base.py  oci_backend.py  s3_backend.py
alphatrion/cmd/: app.py  main.py
alphatrion/log/: load.py  (+1 more)
charts/: QUICKSTART.md
config/: modelspec.yaml
dashboard/: DEPLOYMENT.md  Dockerfile  Manual_Testing.md  docker-entrypoint.sh  entrypoint.sh  ide.html  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
docs/: CLAUDE_CODE_HOOKS.md  IMPLEMENTATION_SUMMARY.md  development.md  graphql_design_doc.md  prometheus-integration.md  roadmap.md
frontend/: Manual_Testing.md
hack/: docker-compose.yaml  seed.py  seed_dashboard_data.py
migrations/: 001_add_team_members_table.sql  README.md
scripts/: migrate_remove_token_cache.py
tests/: conftest.py  test_main.py
(+551 files in other folders)
